@@ -14,6 +14,7 @@ Coccinella-0.96.4 (2007????)
  o drag-and-drop roster items to desktop or other applications as text/plain
  o xml console
  o spell checking
+ o secure (sasl) indicator
 
 
 Coccinella-0.96.2 (20070919)
